--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,6 @@ p {
   display: block;
   width: 400px;
   margin: 50px auto;
-  color: blue;
+  color: green;
   font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
 }
